--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ a {
 .fv {
   width: 100%;
   height: 100vh;
-  background-image: url(../模写Roy/img/kv.jpg);
+  background-image: url(img/kv.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
